--- a/Baha'i/Baha/EW/p001-182.html
+++ b/Baha'i/Baha/EW/p001-182.html
@@ -2,6 +2,7 @@
 <!-- Covenant Library: \cl\Baha'i\Baha\EW\p001-182.html -->
 
 <!-- ISSUES LOG
+p16 - "bond slave" is one word in Hidden Words...left it as two words here
 p19 - footnotes: added The Dawn-Breakers page 421 to references
 p77 - footnotes: added The Dawn-Breakers page 608 to references
 para176 - footnotes: added ROB V1 index
@@ -298,6 +299,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	<td VALIGN=top><small>
 	<hr>
 	These passages from the <i>Hidden Words</i> allude to the waywardness of the divines. See <i>The Revelation of Bahá'u'lláh</i> vol. 2, p. <a href="../../Others/ROB/V2/p337-369Ch16.html#p350">350</a>. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#16">Appendix III</a>)<p>
+	<i>The Hidden Words</i>, <a href="../HiddenWords.html#persian24">Persian #24</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">16</DIV></center></small></td>
 </tr>
@@ -308,6 +310,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	<td VALIGN=top><small>
 	<hr>
 	These passages from the <i>Hidden Words</i> allude to the waywardness of the divines. See <i>The Revelation of Bahá'u'lláh</i> vol. 2, p. <a href="../../Others/ROB/V2/p337-369Ch16.html#p350">350</a>. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#16">Appendix III</a>)<p>
+	<i>The Hidden Words</i>, <a href="../HiddenWords.html#persian25">Persian #25</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -318,6 +321,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	<td VALIGN=top><small>
 	<hr>
 	These passages from the <i>Hidden Words</i> allude to the waywardness of the divines. See <i>The Revelation of Bahá'u'lláh</i> vol. 2, p. <a href="../../Others/ROB/V2/p337-369Ch16.html#p350">350</a>. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#16">Appendix III</a>)<p>
+	<i>The Hidden Words</i>, <a href="../HiddenWords.html#persian28">Persian #28</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -328,6 +332,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	<td VALIGN=top><small>
 	<hr>
 	These passages from the <i>Hidden Words</i> allude to the waywardness of the divines. See <i>The Revelation of Bahá'u'lláh</i> vol. 2, p. <a href="../../Others/ROB/V2/p337-369Ch16.html#p350">350</a>. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#16">Appendix III</a>)<p>
+	<i>The Hidden Words</i>, <a href="../HiddenWords.html#persian30">Persian #30</a>	
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -1658,6 +1663,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	[Mír Muhammad-Husayn] <i>The Revelation of Bahá'u'lláh</i>, <a href="../../Others/ROB/V4/p463-485Index.html#Muhammad-Husayn,Mír">vol. 4</a><p>
 	["O She-Serpent!..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../TOB/p001-270TOB.html#para587">p. 214</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p091-102Ch06.html#p96">p. 96</a><p>
 	[The King and Beloved of the Martyrs] <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p073-090Ch05.html">ch. 5</a><p>
+	["The People of 'Ád and Thamúd; Húd; Sálih and the She-Camel"] <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p425-428Apndx_I.html">Appendix I</a><p>
 	["O heedless outcast!..."]  <i>Tablets of Bahá'u'lláh</i>, <a href="../TOB/p001-270TOB.html#para587">p. 214</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p091-102Ch06.html#p97">p. 97</a><p>
 	["O perverse hater!..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../TOB/p001-270TOB.html#para587">p. 215</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p091-102Ch06.html#p97">p. 97</a><p>
 	["Thou hast clung to tyranny..."]  <i>Tablets of Bahá'u'lláh</i>, <a href="../TOB/p001-270TOB.html#para587">p. 215</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p091-102Ch06.html#p97">p. 97</a><p>
