--- a/Baha'i/Baha/TSVATFV.html
+++ b/Baha'i/Baha/TSVATFV.html
@@ -198,7 +198,7 @@
 	   </td>
 	   <td></td>
        <td VALIGN=top><small><center><a name="p10">10</a></center><p>
-	   14. Persian mystic poem.  Cf. <i>The Hidden Words</i>, <a href="HiddenWords.html#arabic7">No. 7, Arabic</a>.<p>
+	   14. Persian mystic poem.  Cf. <i>The Hidden Words</i>, <a href="HiddenWords.html#arabic7">Arabic No. 7</a>.<p>
 	   15. Qur'án 50:29.<p>
 	   16. Jalálu'd-Dín Rúmí (1207-1273 A.D.); The <i>Mathnaví</i>.  Jalálu'd-Dín, called Mawláná ("our Master"), is the greatest of all Persian Súfí poets, and founder of the Mawlaví "whirling" dervish order.
 	   </small></td>
