--- a/Baha'i/Baha/HiddenWords.html
+++ b/Baha'i/Baha/HiddenWords.html
@@ -32,7 +32,7 @@
 <b>Misc. References to <i>The Hidden Words</i></b>:
 <br>
 <i>The Revelation of Bahá'u'lláh</i>, vol. 1, <a href="../Others/ROB/V1/p071-083Ch06.html">Chapter 6</a>, vol. 2, <a href="../Others/ROB/V2/p029-054Ch02.html">p. 29</a>, vol. 4, <a href="../Others/ROB/V4/p050-072Ch04.html#p53">p. 53</a><br>
-<i>God Passes By</i>, <a href="../SE/GPB/p087-234SecondPeriod.html#para70">p. 121</a>, <a href="../SE/GPB/p235-320ThirdPeriod.html#para49">p. 260</a>, <a href="../SE/GPB/p321-401FourthPeriod.html#para41">p. 347</a>, <a href="../SE/GPB/p321-401FourthPeriod.html#para119">p. 381</a>, <a href="../SE/GPB/p321-401FourthPeriod.html#para123">p. 383</a> 
+<i>God Passes By</i>, <a href="../SE/GPB/p087-234SecondPeriod.html#para70">p. 121</a>, <a href="../SE/GPB/p087-234SecondPeriod.html#para110">p. 139</a>, <a href="../SE/GPB/p235-320ThirdPeriod.html#para49">p. 260</a>, <a href="../SE/GPB/p321-401FourthPeriod.html#para41">p. 347</a>, <a href="../SE/GPB/p321-401FourthPeriod.html#para119">p. 381</a>, <a href="../SE/GPB/p321-401FourthPeriod.html#para123">p. 383</a> 
 </small>
 
 
@@ -900,7 +900,8 @@
        <td VALIGN=top><small><center><a name="persian24">Persian #24</a></center><p>
 	   <i>The Revelation of Bahá'u'lláh</i>, 
 	   vol. 2, <a href="../Others/ROB/V2/p337-369Ch16.html#p350">p. 350</a>, 
-	   vol. 3, <a href="../Others/ROB/V3/p343-370Ch16.html#p356">p. 356</a>
+	   vol. 3, <a href="../Others/ROB/V3/p343-370Ch16.html#p356">p. 356</a><p>
+	   <i>Epistle to the Son of the Wolf</i>, <a href="EW/p001-182.html#para25">p. 16</a>
 	   </small></td>
 </tr>
 
@@ -912,7 +913,8 @@
        <td VALIGN=top><small><center><a name="persian25">Persian #25</a></center><p>
 	   <i>The Revelation of Bahá'u'lláh</i>, 
 	   vol. 2, <a href="../Others/ROB/V2/p337-369Ch16.html#p350">p. 350</a>, 
-	   vol. 3, <a href="../Others/ROB/V3/p343-370Ch16.html#p356">p. 356</a>
+	   vol. 3, <a href="../Others/ROB/V3/p343-370Ch16.html#p356">p. 356</a><p>
+	   <i>Epistle to the Son of the Wolf</i>, <a href="EW/p001-182.html#para26">p. 16</a>
 	   </small></td>
 </tr>
 
@@ -948,6 +950,7 @@
 	   <td></td>
        <td VALIGN=top><small><center><a name="persian28">Persian #28</a></center><p>
 	   <i>The Revelation of Bahá'u'lláh</i>, vol. 2, <a href="../Others/ROB/V2/p337-369Ch16.html#p350">p. 350</a><p>
+	   <i>Epistle to the Son of the Wolf</i>, <a href="EW/p001-182.html#para27">p. 16</a><p>
 	   Audio: <i>Love of Baha II</i>: <a href="https://drive.google.com/file/d/0B6cYw5IwKTYsNmU1a0R6V0VYc1E/edit?usp=sharing" Target='_blank'>#8</a>. <small>See <a href="../../download.html">Download</a> section.</small>
 	   </small></td>
 </tr>
@@ -966,7 +969,8 @@
 	   </td>
 	   <td></td>
        <td VALIGN=top><small><center><a name="persian30">Persian #30</a></center><p>
-	   <i>The Revelation of Bahá'u'lláh</i>, vol. 2, <a href="../Others/ROB/V2/p337-369Ch16.html#p350">p. 350</a>
+	   <i>The Revelation of Bahá'u'lláh</i>, vol. 2, <a href="../Others/ROB/V2/p337-369Ch16.html#p350">p. 350</a><p>
+	   <i>Epistle to the Son of the Wolf</i>, <a href="EW/p001-182.html#para28">p. 16</a>
 	   </small></td>
 </tr>
 
