--- a/Baha'i/AB/SAQ/p081-140Part2.html
+++ b/Baha'i/AB/SAQ/p081-140Part2.html
@@ -857,6 +857,8 @@
 	<td VALIGN=top><small>
 	1. Cf. Matt. 24:29-30.<p>
 	2. <a href="../../Baha/KI/Cover.html">Kitáb-i-Iqán</a>, one of the first works of Bahá'u'lláh, written at Baghdád, before the declaration of His manifestation.
+	<hr>
+	["...and then shall all the tribes..."] <i>The Kitáb-i-Iqán</i>, <a href="../../Baha/KI/p001-094.html#para25">p. 25</a>, <a href="../../Baha/KI/p001-094.html#para75">p. 66</a> 
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
