--- a/Baha'i/AB/SAQ/p261-306Part5.html
+++ b/Baha'i/AB/SAQ/p261-306Part5.html
@@ -748,6 +748,8 @@
 	</td>
 	<td VALIGN=top><small>
 	1. Bahá'u'lláh.
+	<hr>
+	["Return: symbolic meaning of"] <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p271-274Index.html#ReturnSymbolicmeaningof">Index</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">289</DIV></center><p></small></td>
 </tr>
