--- a/Baha'i/Others/ROB/V3/p221-252Ch11.html
+++ b/Baha'i/Others/ROB/V3/p221-252Ch11.html
@@ -65,7 +65,9 @@
 	   † The birth of the Báb and Bahá'u'lláh are celebrated in the East according to the lunar calendar.
 	   <hr>
 	   <hr>
-	   [Lawh-i-Ru'yá] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para297">p. 221</a>
+	   [Lawh-i-Ru'yá] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para297">p. 221</a><p>
+	   [CLUI: <a href="../../../../CLUI/UnifiedIndex.html#Zaynu'l-'Ábidín,Mullá">Zaynu'l-'Ábidín, Mullá (Zaynu'l-Muqarrabín)</a>]<p>
+	   [CLUI: <a href="../../../../CLUI/UnifiedIndex.html#Mishkín-Qalam">Mishkín-Qalam</a>]<p>
 	   </small></td>
 </tr>
 <tr>
