--- a/about.html
+++ b/about.html
@@ -43,6 +43,11 @@ Many friends have asked for the ability to download all the books in this librar
        <td><center><b>Date</b></center></td>
 </tr>
 <tr>
+       <td>1.11.2</td>
+       <td>Addition of the Covenant Library Unified Glossary</td>
+       <td>May 2021</td>
+</tr>
+<tr>
        <td>1.11.1</td>
        <td>Addition of the Covenant Library Unified Index</td>
        <td>April 2021</td>
