--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
 
 <br>
 
+<h4><a href="CLUG/UnifiedGlossary.html">Covenant Library Unified Glossary</a></h4>
+
 <h4>Covenant Library Unified Index: <a href="CLUI/UnifiedIndex.html">Collapsed</a> / <a href="CLUI/UnifiedIndex-F.html">Flat</a></h4>
 
 <h4><a href="search.html">Search</a></h4>
@@ -85,7 +87,7 @@
 
 <h4><a href="about.html">About</a></h4>
 
-<small><p><i>The Covenant Library, version 1.11.1.<br>
+<small><p><i>The Covenant Library, version 1.11.2.<br>
 Best viewed with desktop versions of Firefox or Chrome browsers</i>
 <p>
 </body>
