--- a/Baha'i/Baha/EW/p183-194Glossary.html
+++ b/Baha'i/Baha/EW/p183-194Glossary.html
@@ -36,9 +36,14 @@ SIYYID ASHRAF-I-ZANJÁNÍ - Nazir changed to Básir
 </tr>
 </table>
 
+
+<center><b><i>(Note: All entries in this glossary are included in the <a href="../../../CLUG/UnifiedGlossary.html">Covenant Library Unified Glossary</a>)</i></b></center>
+<p>
+
+<center><h2>GLOSSARY</h2></center><p>
 <table border="0" cellspacing="2" cellpadding="5" height="100" bgcolor="">
 <tr>
-       <td width="80%"><center><h2>GLOSSARY</h2></center><p></td>
+       <td width="80%"></td>
        <td width="0%">&nbsp;</td>
        <td width="20%" VALIGN=top><small><center>183</center><p></small></td>
 </tr>
