--- a/Baha'i/Baha/KA/p252-254Glossary.html
+++ b/Baha'i/Baha/KA/p252-254Glossary.html
@@ -32,9 +32,13 @@
 </tr>
 </table>
 
+<center><b><i>(Note: All entries in this glossary are included in the <a href="../../../CLUG/UnifiedGlossary.html">Covenant Library Unified Glossary</a>)</i></b></center>
+<p>
+
+<center><h2>GLOSSARY</h2></center><p>
 <table border="0" cellspacing="2" cellpadding="2" height="100" bgcolor="">
 <tr>
-       <td width="80%"><center><h2>GLOSSARY</h2></center><p>
+       <td width="80%">
 	   <a name="'Abdu'l-Bahá"></a><b>'Abdu'l-Bahá</b>
 	   <blockquote>The "Servant of Bahá", 'Abbás Effendi (1844-1921), the eldest son and appointed Successor of Bahá'u'lláh, and the Centre of His Covenant.</blockquote>
 	   <a name="Abjad"></a><b>Abjad</b>
