--- a/Baha'i/Baha/KI/p259-270GlossaryAndNotes.html
+++ b/Baha'i/Baha/KI/p259-270GlossaryAndNotes.html
@@ -36,9 +36,14 @@
 </table>
 
 
+<center><b><i>(Note: All entries in this glossary are included in the <a href="../../../CLUG/UnifiedGlossary.html">Covenant Library Unified Glossary</a>)</i></b></center>
+<p>
+
+<center><h2><i>GLOSSARY AND NOTES</i></h2></center><p>
+
 <table border="0" cellspacing="2" cellpadding="5" height="100" bgcolor="">
 <tr>
-      <td width="80%"><a name="p259"/><center><h2><i>GLOSSARY AND NOTES</i></h2></center><p></td>
+      <td width="80%"><a name="p259"/></td>
 	  <td width="0%"></td>
       <td width="20%" VALIGN=top><small><center><DIV TITLE="Page number location is approximate">259</DIV></center><p>
 </tr>
