--- a/Baha'i/Others/DBNN/p674-678Glossary.html
+++ b/Baha'i/Others/DBNN/p674-678Glossary.html
@@ -34,6 +34,8 @@
 </tr>
 </table>
 
+<center><b><i>(Note: All entries in this glossary are included in the <a href="../../../CLUG/UnifiedGlossary.html">Covenant Library Unified Glossary</a>)</i></b></center>
+<p>
 
 <table border="0" cellspacing="2" cellpadding="5" bgcolor="" width="100%">
 <tr>
