--- a/CLUI/UnifiedIndex-F.html
+++ b/CLUI/UnifiedIndex-F.html
@@ -116,7 +116,7 @@ Click <a href="UnifiedIndex.html">here</a> to switch to the collapsed version of
 <p>
 Key:<p>
 <a href="../Baha'i/Others/DBNN/p679-685Index.html">{DBNN}</a> = <i>Dawn-Breakers, Nabíl's Narrative</i><br>
-<a href="../Baha'i/SE/GPB/p413-436Index.html">{ESW}</a>&nbsp;&nbsp;= <i>Epistle to the Son of the Wolf</i><br>
+<a href="../Baha'i/Baha/EW/p195-197Index.html">{ESW}</a>&nbsp;&nbsp;= <i>Epistle to the Son of the Wolf</i><br>
 <a href="../Baha'i/SE/GPB/p413-436Index.html">{GPB}</a>&nbsp;&nbsp;= <i>God Passes By</i><br>
 <a href="../Baha'i/Others/ROB/V1/p351-363Index.html">{ROB1}</a> = <i>The Revelation of Bahá'u'lláh, Volume 1</i> (Baghdad 1853-63)<br>
 <a href="../Baha'i/Others/ROB/V2/p469-476Index.html">{ROB2}</a> = <i>The Revelation of Bahá'u'lláh, Volume 2</i> (Adrianople 1863-68)<br>
@@ -232,12 +232,17 @@ Key:<p>
 		{<tt>ROB1</tt>: <a href= "../Baha'i/Others/ROB/V1/p071-083Ch06.html#p78">78</a>}<br>
 		excerpts from, {<tt>ESW</tt>: <a href= "../Baha'i/Baha/EW/p001-182.html#p15">15</a>, <a href= "../Baha'i/Baha/EW/p001-182.html#p16">16</a>}<br>
 		</blockquote>
-	<a class="hh" title="The daughter of Muhammad and Khadíjih. She married 'Alí, the cousin of Muhammad, and had three sons. One died in infancy and from the other two, Hasan and Husayn, are descended the posterity of the Prophet known as Siyyids" href="../CLUG/UnifiedGlossary.html#Fátimih">Fátimih</a>, <a class="hh" title="The book revealed by Gabriel for Fátimih as consolation after her Father's death and believed by Shí'ah Islám to be in the Qá'im's possession. Identified with The Hidden Words" href="../CLUG/UnifiedGlossary.html#FátimihBookOf">'Hidden Book'</a> of<a name="Fátimih,HiddenBookof"></a>,
+	<a class="hh" title="The book revealed by Gabriel for Fátimih as consolation after her Father's death and believed by Shí'ah Islám to be in the Qá'im's possession. Identified with The Hidden Words" href="../CLUG/UnifiedGlossary.html#FátimihBookOf">'Hidden Book' of Fátimih</a><a name="Fátimih,HiddenBookof"></a>,
 		<blockquote>
 		{<tt>ESW</tt>: <a href= "../Baha'i/Baha/EW/p001-182.html#p15">15</a>, <a href= "../Baha'i/Baha/EW/p001-182.html#p81">81</a>, <a href= "../Baha'i/Baha/EW/p001-182.html#p99">99</a>, <a href= "../Baha'i/Baha/EW/p001-182.html#p100">100</a>}<br>
 		{<tt>ROB1</tt>: <a href= "../Baha'i/Others/ROB/V1/p071-083Ch06.html#p71">71</a>}<br>
 		{<tt>GPB</tt>: <a href= "../Baha'i/SE/GPB/p087-234SecondPeriod.html#p140">140</a>}<br>
-		<i>see also</i> <a href="#Fátimih">Fátimih</a>
+		<a class="hh" title="The daughter of Muhammad and Khadíjih. She married 'Alí, the cousin of Muhammad, and had three sons. One died in infancy and from the other two, Hasan and Husayn, are descended the posterity of the Prophet known as Siyyids" href="../CLUG/UnifiedGlossary.html#Fátimih">Fátimih</a><a name="Fátimih"></a>, daughter of the Prophet Muhammad,
+			<blockquote>
+			{<tt>GPB</tt>: <a href= "../Baha'i/SE/GPB/p321-401FourthPeriod.html#p347">347</a>}<br>
+			{<tt>ROB1</tt>: <a href= "../Baha'i/Others/ROB/V1/p071-083Ch06.html#p71">71</a>-2}<br>
+			{<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p091-102Ch06.html#p91">91n.</a>, <a href= "../Baha'i/Others/ROB/V4/p432-440Apndx_III.html#p433">433</a>}<br>
+			</blockquote>
 		</blockquote>
 	major themes of, {<tt>ROB1</tt>: <a href= "../Baha'i/Others/ROB/V1/p071-083Ch06.html#p72">72</a>, <a href= "../Baha'i/Others/ROB/V1/p071-083Ch06.html#p75">75</a>, <a href= "../Baha'i/Others/ROB/V1/p071-083Ch06.html#p77">77</a>, <b><a href= "../Baha'i/Others/ROB/V1/p071-083Ch06.html#p78">78</a>-80</b>}<br>
 	manner of its Revelation, {<tt>ROB1</tt>: <a href= "../Baha'i/Others/ROB/V1/p071-083Ch06.html#p71">71</a>}<br>
@@ -1249,6 +1254,11 @@ Key:<p>
 				<blockquote>
 				{<tt>GPB</tt>: <a href= "../Baha'i/SE/GPB/p087-234SecondPeriod.html#p194">194</a>}<br>
 				{<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p329-350Ch22.html#p332">332</a>-7}<br>
+				</blockquote>
+			Elijah, cave of<a name="Lawh-i-KarmilElijah,caveof"></a>,
+				<blockquote>
+				{<tt>GPB</tt>: <a href= "../Baha'i/SE/GPB/p235-320ThirdPeriod.html#p277">277</a>}<br>
+				{<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p351-367Ch23.html#p351">351</a>, <a href= "../Baha'i/Others/ROB/V4/p351-367Ch23.html#p359">359</a>}<br>
 				</blockquote>
 			future site of Bahá'í institutions<a name="Lawh-i-Karmilfutureinstitutions"></a>, 
 				<blockquote>
@@ -3926,6 +3936,7 @@ Bahá'í Faith<a name="Bahá'íFaith"></a>:
 				</blockquote>
 			 Day of the Covenant, November 25/26, <i>see</i> <a href="../Baha'i/UHJ/Messages/10July2014TotheBahaisoftheWorld.xhtml">UHJ Message July 2014</a><br>
 			 Ascension of 'Abdu'l-Bahá, November 27/28 1 a.m. (Standard Time), <i>see</i> <a href="#'Abdu'l-BaháAscensionof">'Abdu'l-Bahá</a><br>
+			 
 			 </blockquote>
 		Nineteen Day Feast, 
 			<blockquote>
@@ -4064,7 +4075,7 @@ Bahá'í Faith<a name="Bahá'íFaith"></a>:
 					{<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p294-314Ch20.html#p314">314</a>}<br>
 					</blockquote>
 				</blockquote>
-			supersede Bahá'í Temple Unity, {<tt>GPB</tt>: <a href= "../Baha'i/SE/GPB/p321-401FourthPeriod.html#p333">333</a>}<br>			
+						
 			</blockquote>
 		attacks on, {<tt>GPB</tt>: <a href= "../Baha'i/SE/GPB/p321-401FourthPeriod.html#p354">354</a>-363}<br>
 		Auxiliary Board Members<a name="Bahá'íFaithinstAuxBoardMembers"></a>, {<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p274-293Ch19.html#p277">277</a>}<br>
@@ -6473,11 +6484,7 @@ Elections<a name="Elections"></a>,
 	</blockquote>
 Elijah, 
 	<blockquote>
-	cave of,
-		 <blockquote>
-		{<tt>GPB</tt>: <a href= "../Baha'i/SE/GPB/p235-320ThirdPeriod.html#p277">277</a>}<br>
-		{<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p351-367Ch23.html#p351">351</a>, <a href= "../Baha'i/Others/ROB/V4/p351-367Ch23.html#p359">359</a>}<br>
-		</blockquote>
+	cave of, <i>see</i> <a href="#Lawh-i-KarmilElijah,caveof"><i>Lawh-i-Karmil</i></a><br>
 	return of, <i>see</i> <a href="#Báb,ThereturnofElijah">Báb, The</a>
 	</blockquote>
 Emanation, 
@@ -6572,13 +6579,6 @@ Fátimih 'the Immaculate'<a name="FátimihtheImmaculate"></a>,
 	<blockquote>
 	{<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p177-189Ch12.html#p187">187n.</a>}<br>
 	shrine of, {<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p177-189Ch12.html#p187">187</a>}<br>
-	</blockquote>
-<a class="hh" title="The daughter of Muhammad and Khadíjih. She married 'Alí, the cousin of Muhammad, and had three sons. One died in infancy and from the other two, Hasan and Husayn, are descended the posterity of the Prophet known as Siyyids" href="../CLUG/UnifiedGlossary.html#Fátimih">Fátimih</a><a name="Fátimih"></a>, daughter of the Prophet Muhammad,
-	<blockquote>
-	{<tt>GPB</tt>: <a href= "../Baha'i/SE/GPB/p321-401FourthPeriod.html#p347">347</a>}<br>
-	{<tt>ROB1</tt>: <a href= "../Baha'i/Others/ROB/V1/p071-083Ch06.html#p71">71</a>-2}
-	{<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p091-102Ch06.html#p91">91n.</a>, <a href= "../Baha'i/Others/ROB/V4/p432-440Apndx_III.html#p433">433</a>}<br>
-	'Hidden Book' of, <i>see</i> <a href="#Fátimih,HiddenBookof"><i>The Hidden Words</i></a>
 	</blockquote>
 Fátimih-Bagum, sister of Áqá Muhammad-'Alí of Gázur, {<tt>ROB2</tt>: <a href= "../Baha'i/Others/ROB/V2/p065-106Ch04.html#p105">105</a>-6}<br>
 Feasts, {<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p001-010Ch01.html#p8">8</a>-10, <a href= "../Baha'i/Others/ROB/V4/p011-032Ch02.html#p14">14</a>}<br>
@@ -10091,7 +10091,7 @@ Samuel, Sir Herbert, (High Commissioner for Palestine; later Viscount Samuel of 
 	visits 'Abdu'l-Bahá, {<tt>GPB</tt>: <a href= "../Baha'i/SE/GPB/p235-320ThirdPeriod.html#p306">306</a>}<br>
 	</blockquote>
 Sarah, {<tt>GPB</tt>: <a href= "../Baha'i/SE/GPB/p321-401FourthPeriod.html#p347">347</a>}<br>
-<a class="hh" title="He was present with the Sháh's troops attacking Bábís at Zanján. (See Traveller's Narrative, p. 181 note.) During his tenure as governor of Tabríz several believers were executed in that city." href="../CLUG/UnifiedGlossary.html#Sardár'AzízKhán">Sardár 'Azíz Khán</a><a name="Sardár'AzízKhán"></a>, <a href=""><img src="../CLUG/CLUG.jpg" width="10" height="10"></a>
+<a class="hh" title="He was present with the Sháh's troops attacking Bábís at Zanján. (See Traveller's Narrative, p. 181 note.) During his tenure as governor of Tabríz several believers were executed in that city." href="../CLUG/UnifiedGlossary.html#Sardár'AzízKhán">Sardár 'Azíz Khán</a><a name="Sardár'AzízKhán"></a>,
 	<blockquote>
 	{<tt>GPB</tt>: <a href= "../Baha'i/SE/GPB/p001-086FirstPeriod.html#p77">77</a>}<br>
 	{<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p432-440Apndx_III.html#p435">435</a>}<br>
@@ -10898,11 +10898,6 @@ Ustád Husayn-i-Na'l-Band, {<tt>ROB3</tt>: <a href= "../Baha'i/Others/ROB/V3/p08
 Uzbikistan, {<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p257-273Ch18.html#p262">262</a>}<br>
 <a class="hh" title="A prominent early believer who lived during the ministry of the Báb and Bahá'u'lláh" href="../CLUG/UnifiedGlossary.html#MírzáVahháb-i-Khurásání">Vahháb-i-Khurásání, Mírzá</a> (Mírzá Javád)<a name="Vahháb-i-Khurásání,Mírzá(MírzáJavád)"></a>, {<tt>ROB1</tt>: <a href= "../Baha'i/Others/ROB/V1/p246-256Ch15.html#p254">254</a>}<br>
 Vambery, Prof. Arminius, pays tribute to the Faith, {<tt>GPB</tt>: <a href= "../Baha'i/SE/GPB/p235-320ThirdPeriod.html#p316">316</a>}<br>
-Varaqih (Leaf), Handmaidens,
-	<blockquote>
-	{<tt>ROB1</tt>: <a href= "../Baha'i/Others/ROB/V1/p012-017Ch02.html#p14">14n.</a>}<br>
-	<i>see also</i> <a href="#Women">Women</a>
-	</blockquote>
 Vatican<a name="Vatican"></a>, {<tt>ROB3</tt>: <a href= "../Baha'i/Others/ROB/V3/p108-132Ch06.html#p117">117</a>-18}<br>
 Vegetable kingdom<a name="Vegetablekingdom"></a>, {<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p190-204Ch13.html#p198">198</a>-9, <a href= "../Baha'i/Others/ROB/V4/p239-256Ch17.html#p255">255</a>-6}<br>
 Versailles, Treaty of, {<tt>ROB3</tt>: <a href= "../Baha'i/Others/ROB/V3/p147-173Ch08.html#p154">154</a>}<br>
@@ -10998,6 +10993,7 @@ Women<a name="Women"></a>,
 	seclusion of, {<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p118-144Ch08.html#p119">119</a>, <a href= "../Baha'i/Others/ROB/V4/p190-204Ch13.html#p201">201</a>}<br>
 	Spiritual Assembly of Bahá'í, <i>see</i> <a href="#LSAofBahá'íWomen">Bahá'í Faith</a><br>
 	teacher training institute for, {<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p294-314Ch20.html#p304">304</a>}<br>
+	'Varaqih' (Leaf), Handmaidens, {<tt>ROB1</tt>: <a href= "../Baha'i/Others/ROB/V1/p012-017Ch02.html#p14">14n.</a>}<br>
 	Women's International League for Peace, {<tt>GPB</tt>: <a href= "../Baha'i/SE/GPB/p321-401FourthPeriod.html#p343">343</a>}<br>
 	</div>
 	</blockquote>
