--- a/Baha'i/AB/SAQ/Cover.html
+++ b/Baha'i/AB/SAQ/Cover.html
@@ -37,17 +37,15 @@
 
 <table border="1" cellspacing="2" cellpadding="0" WIDTH="100%" bgcolor="">
 <tr>
-       <td BACKGROUND="coverphoto.jpg" >
+       <td BACKGROUND="coverphoto.jpg" ><a name="cover"></a>
 	   <br><br><br><br>
 	   <center><h3><font color="#f6d574"><i>'Abdu'l-Bahá</i></font></h3></center><p>
 	   <center><h2><big><big><font color="#f6d574">SOME<br>ANSWERED<br>QUESTIONS</font></big></big></h2></center><p>
 	   <br><br><br><br><br><br><br>
 	   </td>
-	   <td></td>
-       <td VALIGN=top><small><center><a name="cover"></a></center><p></small></td>
 </tr>
 <tr>
-	<td>
+	<td><a name="cover2"></a>
 	<br><br><br>
 	<center><h1>SOME<br>ANSWERED<br>QUESTIONS</h1>
 	<h2><i>'Abdu'l-Bahá</i></h2>
@@ -57,11 +55,9 @@
 	BAHÁ'Í PUBLISHING TRUST<P>WILMETTE, ILLINOIS 60091</center>
 	<br><br><br>
 	</td>
-	<td></td>
-	<td VALIGN=top><small><center><a name="cover2"></a></center><p></small></td>	
 </tr>
 <tr>
-	<td>
+	<td><a name="cover3"></a>
 	<br><br><br>
 	<center><small>
 	Copyright 1930, 1954, &copy; 1964, 1981 by the<br>
@@ -74,7 +70,7 @@
 	First pocket-size edition 1984/Reprinted 1990
 	<p></center>
 	
-<blockquote><blockquote>
+	<blockquote><blockquote>
 	<b>Library of Congress Cataloging in Publication Data</b>
 	<br>
 	Abdu'l-Bahá, 1844-1921.<br>
@@ -100,8 +96,6 @@
 	</small></center>
 	<br><br><br>
 	</td>
-	<td></td>
-	<td VALIGN=top><small><center><a name="cover3"></a></center><p></small></td>	
 </tr>
 
 </table>
