--- a/Baha'i/Baha/GL/GlossaryAndNotes.html
+++ b/Baha'i/Baha/GL/GlossaryAndNotes.html
@@ -20,7 +20,7 @@
 		   </FORM>	   
 	   </td>
        <td>
-	   	   <FORM ACTION="Cover.html" METHOD=GET>
+	   	   <FORM ACTION="Contents.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="^" NAME=up>
 		   </FORM>
 		   <FORM ACTION="../../../index.html" METHOD=GET>
@@ -828,7 +828,7 @@
 		   </FORM>	   
 	   </td>
        <td>
-	   	   <FORM ACTION="Cover.html" METHOD=GET>
+	   	   <FORM ACTION="Contents.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="^" NAME=up>
 		   </FORM>
 		   <FORM ACTION="../../../index.html" METHOD=GET>
