--- a/Baha'i/Baha/KA/Cover.html
+++ b/Baha'i/Baha/KA/Cover.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <!-- Covenant Library: \cl\Baha'i\Baha\KA\Cover.html -->
 
-<!-- ISSUES LOG
+<!-- ISSUES LOG 
 
 -->
 
@@ -17,7 +17,7 @@
        <td>
 	   	   <FORM ACTION="../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="../../../index.html" METHOD=GET>
@@ -30,39 +30,35 @@
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
 
 <table border="1" cellspacing="2" cellpadding="0" WIDTH="100%" bgcolor="">
 <tr>
-       <td BGCOLOR="#000066">
+       <td BGCOLOR="#000066"><a name="cover"></a>
 	   <br><br><br><br>
 	   <center><h3><big><font color="#f6d574">T H E &nbsp;&nbsp;  K I T Á B - I - A Q D A S</font></big></h3></center><p>
 	   <br><br>
 	   <center><h1><big><big><font color="#330973">The<br>Most<br>Holy<br>Book</font></h1></big></big></center>
 	   <br><br><br><br><br><br><br>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover"></a></center><p></small></td>
 </tr>
 <tr>
-       <td><br><br><br><br>
+       <td><a name="cover2"></a><br><br><br><br>
 	   <center><h2>T H E<br>K I T Á B - I - A Q D A S</h2></center><p>
    	   <center>________________</center><p>
 	   <center><big><big><big><b>The<br>Most<br>Holy<br>Book</b></big></big></big></center><br>
-	   <center>________________</center><p>
+	   <center>________________</center><p>	   
 	   <center><h1>Bahá'u'lláh</h1></center><p>
 	   <center>________________</center><p>
 	   <center>BAHÁ'Í WORLD CENTRE</center><br>
 	   <center>HAIFA</center>
 	   <br><br><br><br>
 	   </td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover2"></a></center><p></small></td>
 </tr>
 <tr>
-       <td>
+       <td><a name="cover3"></a>
 	   <br><br><br><br>
 	   <small><center>
 	   &copy; THE UNIVERSAL HOUSE OF JUSTICE 1992<p>
@@ -83,8 +79,6 @@
 	   </center></small>
 	   <br><br><br><br>
 	   </td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover3"></a></center><p></small></td>
 </tr>
 
 </table>
@@ -94,7 +88,7 @@
        <td>
 	   	   <FORM ACTION="../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="../../../index.html" METHOD=GET>
@@ -107,7 +101,7 @@
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
