--- a/Baha'i/Baha/KI/Cover.html
+++ b/Baha'i/Baha/KI/Cover.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <!-- Covenant Library: \cl\Baha'i\Baha\KI\Cover.html -->
 
-<!-- ISSUES LOG
+<!-- ISSUES LOG 
 
 -->
 
@@ -17,7 +17,7 @@
        <td>
 	   	   <FORM ACTION="../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="../../../index.html" METHOD=GET>
@@ -30,25 +30,23 @@
        <td>
 	   	   <FORM ACTION="p001-094.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
 
 <table border="1" cellspacing="2" cellpadding="0" WIDTH="100%" bgcolor="">
 <tr>
-       <td BACKGROUND="coverphoto.jpg" >
+       <td BACKGROUND="coverphoto.jpg" ><a name="cover"></a>
 	   <br><br><br><br>
 	   <center><h3><font color="#f6d574"><i>Bahá'u'lláh</i></font></h3></center><p>
 	   <center><h3><big><big><font color="#f6d574"><i>K I T Á B - I - Í Q Á N</i></font></big></big></h3></center><p>
 	   <center><h1><font color="#f6d574"><i>The Book<br>of<br>Certitude</i></font></h1></center>
 	   <br><br><br><br><br><br><br>
 	   </td>
-	   <td></td>
-       <td VALIGN=top><small><center><a name="cover"></a></center><p></small></td>
 </tr>
 <tr>
-	<td>
+	<td><a name="cover2"></a>
 	<br><br><br>
 	<center><h1>KITÁB-I-ÍQÁN</h1><h2>The Book<br>of<br>Certitude</h2>
 	<br><br><br><br><br><br>
@@ -57,36 +55,32 @@
 	BAHÁ'Í PUBLISHING TRUST<P>WILMETTE, ILLINOIS 60091</center>
 	<br><br><br>
 	</td>
-	<td></td>
-	<td VALIGN=top><small><center><a name="cover2"></a></center><p></small></td>
 </tr>
 <tr>
-	<td>
+	<td><a name="cover3"></a>
 	<br><br><br>
 	<center><small>
 	COPYRIGHT &copy;  1931, 1950 BY THE<p>
 	NATIONAL SPIRITUAL ASSEMBLY OF THE<p>
 	BAHÁ'ÍS OF THE UNITED STATES<p>
 	ALL RIGHTS RESERVED<p><br><br><br>
-
+	
 	This translation by Shoghi Effendi was<br>
-	first published in 1931. A second edition<br>
+	first published in 1931. A second edition<br> 
 	with an introduction and index was pub-<br>
-	lished in 1950 and was subsequently printed<br>
+	lished in 1950 and was subsequently printed<br> 
 	seven times. First pocket-size edition 1983.<br>
 	Reprinted 1985, 1989<p><br><br><br>
-
+	
 	ISBN 0-87743-022-5 hardcover<br>
 	ISBN 0-87743-189-2 pocket size<br>
 	Library of Congress Catalog Card No. 51-22838<p><br><br><br>
-
-
+	
+	
 	PRINTED IN THE UNITED STATES OF AMERICA
 	</small></center>
 	<br><br><br>
 	</td>
-	<td></td>
-	<td VALIGN=top><small><center><a name="cover3"></a></center><p></small></td>
 </tr>
 <tr>
 	<td>
@@ -98,8 +92,6 @@
 	</blockquote>
 	<br><br><br>
 	</td>
-	<td></td>
-	<td VALIGN=top><small><center><a name="forward"></a></center><p></small></td>
 </tr>
 
 </table>
@@ -109,7 +101,7 @@
        <td>
 	   	   <FORM ACTION="../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="../../../index.html" METHOD=GET>
@@ -122,7 +114,7 @@
        <td>
 	   	   <FORM ACTION="p001-094.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
