--- a/Baha'i/Baha/KI/p095-258.html
+++ b/Baha'i/Baha/KI/p095-258.html
@@ -78,7 +78,7 @@
 	<td VALIGN=top><small>
 	1. Qur'án 6:103.<br>
 	<hr>
-	["To every discerning and illumined heart..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p001-006Intro.html#p1">p. 1</a>, <a href="../../Others/ROB/V1/p045-052Ch04.html#p46">p. 46</a>, <a href="../../Others/ROB/V1/p153-197Ch10.html#p175">p. 175</a> <p>
+	["To every discerning and illumined heart..."] <i>Gleanings from the Writings of Bahá'u'lláh</i>, <a href="../GL/p003-346.html#XIX">XIX</a>; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p001-006Intro.html#p1">p. 1</a>, <a href="../../Others/ROB/V1/p045-052Ch04.html#p46">p. 46</a>, <a href="../../Others/ROB/V1/p153-197Ch10.html#p175">p. 175</a> <p>
 	["immensely exalted..."] <i>The Revelation of Bahá'u'lláh</i> vol 2. <a href="../../Others/ROB/V2/p001-028Ch01.html#p17">p. 17</a><p>
 	["No vision taketh in Him..."] <a href="p095-258.html#para81">p. 170</a>; <i>Epistle to the Son of the Wolf</i>, <a href="../EW/p001-182.html#para18">p. 13</a>
 	<hr>
@@ -115,6 +115,8 @@
 	1. Qur'án 41:53.<br>
 	2. Qur'án 51:21.<br>
 	3. Qur'án 59:19.
+	<hr>
+	["Whatever is in the heavens and..."] <i>Gleanings from the Writings of Bahá'u'lláh</i>, <a href="../GL/p003-346.html#XC">XC</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">101</DIV></center></small><p></small></td>
 </tr>
@@ -676,6 +678,7 @@
 	2. Qur'án 54:50.<p>
 	<hr>
 	["Furthermore, it is evident..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p153-197Ch10.html#p177">p. 177</a><p>
+	["The Bearers of the Trust of God..."] <i>Gleanings from the Writings of Bahá'u'lláh</i>, <a href="../GL/p003-346.html#XXII">XXII</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">153</DIV></center><p></small></td>
 </tr>
@@ -1207,6 +1210,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	["But, O my brother..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p153-197Ch10.html#p187">p. 187</a><p>
+	["O My brother..."] <i>Gleanings from the Writings of Bahá'u'lláh</i>, <a href="../GL/p003-346.html#CXXV">CXXV</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">193</DIV></center></small><p></td>
 </tr>
@@ -1548,6 +1552,8 @@
 	</td>
 	<td VALIGN=top><small>
 	1. Qur'án 11:27.
+	<hr>
+	<i>Gleanings from the Writings of Bahá'u'lláh</i>, <a href="../GL/p003-346.html#XCI">XCI</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">222</DIV></center></small><p></td>
 </tr>
