--- a/Baha'i/Baha/PM/Cover.html
+++ b/Baha'i/Baha/PM/Cover.html
@@ -37,17 +37,15 @@
 
 <table border="1" cellspacing="2" cellpadding="0" WIDTH="100%" bgcolor="">
 <tr>
-       <td BACKGROUND="coverphoto.jpg" >
+       <td BACKGROUND="coverphoto.jpg" ><a name="cover"></a>
 	   <br><br><br><br>
 	   <center><h3><font color="#f6d574"><i>Bahá'u'lláh</i></font></h3></center><p>
 	   <center><h3><big><big><font color="#f6d574"><i>Prayers<br>and<br>Meditations<br></i></font></big></big></h3></center><p>
 	   <br><br><br><br><br><br><br>
 	   </td>
-	   <td></td>
-       <td VALIGN=top><small><center><a name="cover"></a></center><p></small></td>
 </tr>
 <tr>
-	<td>
+	<td><a name="cover2"></a>
 	<br><br><br>
 	<center><h1><i>Prayers<br>and<br>Meditations</i></h1>
 	<br><br><br><br><br><br>
@@ -58,11 +56,9 @@
 	BAHÁ'Í PUBLISHING TRUST<P>WILMETTE, ILLINOIS 60091</center>
 	<br><br><br>
 	</td>
-	<td></td>
-	<td VALIGN=top><small><center><a name="cover2"></a></center><p></small></td>	
 </tr>
 <tr>
-	<td>
+	<td><a name="cover3"></a>
 	<br><br><br>
 	<center><small>
 	COPYRIGHT 1938 BY<p>
@@ -80,24 +76,18 @@
 	</small></center>
 	<br><br><br>
 	</td>
-	<td></td>
-	<td VALIGN=top><small><center><a name="cover3"></a></center><p></small></td>	
 </tr>
 <tr>
-	<td>
+	<td><a name="cover4"></a>
 	<br><br><br>
 	<center><h1><i>Prayers<br>and<br>Meditations</i></h1>
 	<br><br><br>
 	</td>
-	<td></td>
-	<td VALIGN=top><small><center><a name="cover4"></a></center><p></small></td>	
 </tr>
 <tr>
 	<td>
 	&nbsp;
 	</td>
-	<td></td>
-	<td VALIGN=top><small><center><a name="cover5"></a></center><p></small></td>	
 </tr>
 </table>
 
